--- a/src/Styles/abstracts/_mixins.scss
+++ b/src/Styles/abstracts/_mixins.scss
@@ -3,3 +3,7 @@
     align-items: center;
     justify-content: space-around;
 }
+
+@mixin themeTransition {
+    transition: all ease-in-out .4s;
+}
