--- a/src/Styles/components/_header.scss
+++ b/src/Styles/components/_header.scss
@@ -5,6 +5,7 @@ header {
 
     @include flexSpaceEven;
     height: 85px;
+    @include themeTransition;
 
     #reactImageHeader {
         font-size: 4em;
@@ -16,6 +17,7 @@ header {
         position: relative;
         right: 5.4em;
         font-weight: 700;
+        
     }
     
     &.light {
@@ -40,6 +42,7 @@ header {
         width: 500px;
         font-weight: 300;
         border-radius: 20px;
+        @include themeTransition;
 
         &.light {
             background-color: $light-complement;
