--- a/src/Styles/abstracts/_mixins.scss
+++ b/src/Styles/abstracts/_mixins.scss
@@ -7,3 +7,22 @@
 @mixin themeTransition {
     transition: all ease-in-out .4s;
 }
+
+@mixin spinAnimation {
+    -webkit-animation:spin 6s linear infinite;
+    -moz-animation:spin 6s linear infinite;
+    animation:spin 6s linear infinite;
+
+    @-moz-keyframes spin { 
+        100% { -moz-transform: rotate(360deg); } 
+    }
+    @-webkit-keyframes spin { 
+        100% { -webkit-transform: rotate(360deg); } 
+    }
+    @keyframes spin { 
+        100% { 
+            -webkit-transform: rotate(360deg); 
+            transform:rotate(360deg); 
+        } 
+    }
+}
