--- a/src/Styles/components/_header.scss
+++ b/src/Styles/components/_header.scss
@@ -4,8 +4,10 @@
 header {
 
     @include flexSpaceEven;
-    height: 85px;
+    height: $headerHeight;
     @include themeTransition;
+    background-color: $light-base;
+    padding: 10px;
 
     #reactImageHeader {
         font-size: 4em;
@@ -17,14 +19,31 @@ header {
         position: relative;
         right: 5.4em;
         font-weight: 700;
-        
+        border-bottom: 6px double $light-complement;
     }
-    
-    &.light {
-        background-color: $light-base;
 
-        h1 {
-            border-bottom: 6px double $light-complement;
+    nav {
+        
+        width: 500px;
+        font-weight: 300;
+        border-radius: 20px;
+        @include themeTransition;
+        background-color: $light-complement;
+        color: $light-base;
+
+        .navMenu {
+            @include flexSpaceEven;
+
+            li {
+                font-size: 20px;
+
+                a {
+                    color: $light-base;
+                    @include themeTransition;
+                }
+            }
+            
+            
         }
     }
 
@@ -35,35 +54,17 @@ header {
         h1 {
             border-bottom: 6px double $dark-complement;
         }
-    }
 
-    nav {
-        
-        width: 500px;
-        font-weight: 300;
-        border-radius: 20px;
-        @include themeTransition;
-
-        &.light {
-            background-color: $light-complement;
-            color: $light-base;
-        }
-
-        &.dark {
+        nav {
             background-color: $dark-complement;
-            color: $dark-base;
-        }
-
-        .navMenu {
-            @include flexSpaceEven;
 
             li {
-
-                font-size: 20px;
+                a {
+                    color: $dark-base;
+                }
             }
-            
-            
         }
     }
+
 }
 
