added functionaliity and jsx sections

--- a/src/Styles/abstracts/_variables.scss
+++ b/src/Styles/abstracts/_variables.scss
@@ -4,5 +4,7 @@ $light-complement: rgb(26, 20, 43);
 $dark-base : rgb(29, 29, 29);
 $dark-complement: rgb(177, 164, 235);
 
+$body-color-light: rgb(240, 240, 240);
+
 $headerHeight : 85px;
 
