--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -13,4 +13,6 @@
 /*components*/
 
 @use './components/header';
-@use './components/sections/whatIsSection'
+@use './components/sections/whatIsSection';
+@use './components/sections/functionality';
+@use './components/sections/jsx'
