--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -15,4 +15,5 @@
 @use './components/header';
 @use './components/sections/whatIsSection';
 @use './components/sections/functionality';
-@use './components/sections/jsx'
+@use './components/sections/jsx';
+@use './components/sections/components'
