--- a/src/Styles/components/_header.scss
+++ b/src/Styles/components/_header.scss
@@ -24,18 +24,19 @@ header {
 
     nav {
         
-        width: 500px;
-        font-weight: 300;
-        border-radius: 20px;
         @include themeTransition;
-        background-color: $light-complement;
-        color: $light-base;
-
+        
         .navMenu {
             @include flexSpaceEven;
+            width: 500px;
+            font-weight: 300;
+            border-radius: 20px;
+            background-color: $light-complement;
+            color: $light-base;
 
             li {
-                font-size: 20px;
+                font-size: 25px;
+                font-style: italic;
 
                 a {
                     color: $light-base;
@@ -44,6 +45,59 @@ header {
             }
             
             
+        }
+
+        #secondaryMenu {
+            background: hsl(0 0% 0% / 0.8);
+
+            position: absolute;
+            right: 40px;
+            top: 18px;
+
+            border-radius: 30px;
+            
+            font-style: italic;
+            font-size: 25px;
+
+            width: 300px;
+            height: 50px;
+
+            @include flexSpaceEven;
+            @include themeTransition;
+
+            opacity: 0;
+            z-index: -1;
+
+            &[data-visible="true"]{
+                opacity: 1;
+                z-index: 100;
+                transform: translateY(50px);
+            }
+
+            @supports (backdrop-filter: blur(1.5rem)){
+                background: hsl(250 100% 20% / 0.1);
+            	backdrop-filter: blur(1.5rem);
+            }
+
+            a {
+                color: $light-complement;
+            }
+
+        }
+    }
+
+    #secondMenuBtn {
+        position: absolute;
+        right: 40px;
+        top: 15px;
+        font-size: 40px;
+        color: $light-complement;
+
+        cursor: pointer;
+        @include themeTransition;
+        
+        &:hover {
+            transform: scale(1.1);
         }
     }
 
@@ -56,13 +110,27 @@ header {
         }
 
         nav {
-            background-color: $dark-complement;
+            
+            .navMenu {
+                background-color: $dark-complement;
 
-            li {
-                a {
-                    color: $dark-base;
+                li {
+                    a {
+                        color: $dark-base;
+                    }
                 }
             }
+
+            #secondaryMenu {
+                a {
+                    color: $dark-complement;
+                }
+            }
+
+        }
+
+        #secondMenuBtn {
+            color: $dark-complement;
         }
     }
 
