Finished all sections

--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -16,4 +16,7 @@
 @use './components/sections/whatIsSection';
 @use './components/sections/functionality';
 @use './components/sections/jsx';
-@use './components/sections/components'
+@use './components/sections/components';
+@use './components/sections/props';
+@use './components/sections/estados';
+@use './components/footer';
