Finished desktop version

--- a/src/Styles/components/_footer.scss
+++ b/src/Styles/components/_footer.scss
@@ -12,4 +12,48 @@ footer {
     a {
         color: $dark-complement;;
     }
+
+    button {
+        font-size: 50px;
+        color: $dark-complement;
+        cursor: pointer;
+    }
+
+    .toasts {
+        background-color: rgb(245, 245, 245); 
+        border-radius: 50px;
+        font-size: 25px;
+        font-weight: 400;
+        font-style: italic;
+        text-align: center;
+        padding: 10px;
+        color: black;
+
+        width: 250px;
+        height: 100px;
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+       
+    }
+
+    .gmailToast, .gitHubBtn, .reactToast {
+        position: relative;
+        top: 400px;
+    }
+    
+    .gitHubBtn {
+        right: 400px;
+    
+    }
+       
+    .reactToast {
+        left: 400px;
+    }
+    
+
 }
+
