--- a/src/Styles/components/sections/_estados.scss
+++ b/src/Styles/components/sections/_estados.scss
@@ -32,7 +32,7 @@
             text-align: center;
             border: 4px solid;
             border-radius: 50px;
-            width: 150px;
+            width: fit-content;
             aspect-ratio: 1;
         }
     
